--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "incenteev/composer-parameter-handler": "^2.0",
         "knplabs/knp-paginator-bundle": "^2.5",
         "liip/imagine-bundle": "^1.7",
+        "oneup/uploader-bundle": "^1.7",
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "symfony/monolog-bundle": "^3.0.2",
